2017-11-30  Martin Pärtel <martin dot partel at gmail dot com>

	* Added options --delete-deny and --rename-deny as suggested by @roojs.
	* Released 1.13.9

2017-10-26  Martin Pärtel <martin dot partel at gmail dot com>

	* Released 1.13.8

2017-06-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Work around `pathconf(..., _PC_NAME_MAX)` erroneously returning 0
	  for some source filesystems (issue #54).

2017-04-19  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --block-devices-as-files (issue #53).
	* Released 1.13.7.

2017-03-14  Martin Pärtel <martin dot partel at gmail dot com>

	* Added Vagrantfile for FreeBSD 10.3 and fixed build and test suite to
	  work with it.

2017-03-12  Martin Pärtel <martin dot partel at gmail dot com>

	* Made tests work with Ruby 1.8.7 and FUSE 2.8 again (issue #49).
	* Added Vagrant test runner, initially running some Ubuntus and
	  CentOSes.

2017-02-04  Martin Pärtel <martin dot partel at gmail dot com>

	* Deprecated -n as an alias to --no-allow-other (issue #48).

2017-01-29  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed option parsing failure when source dir has a comma (issue #47).
	* Released 1.13.6.

2016-10-30  Martin Pärtel <martin dot partel at gmail dot com>

	* Removed ./configure --enable-debug, which has done nothing for some
	  time.

2016-10-29  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed compilation of tests on some non-x86 platforms.
	* Removed extra debug/optimization CFLAGS. Defaults to -g -O2.
	* Released 1.13.5.

2016-10-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed #41 (directory handle reuse).
	* Released 1.13.4

2016-10-02  Martin Pärtel <martin dot partel at gmail dot com>

	* Require FUSE 2.9 at compile-time.
	* Also compile with FUSE 2.8, but without support for lock forwarding.
	* Released 1.13.3

2016-09-25  Martin Pärtel <martin dot partel at gmail dot com>
